--- a/templates/login.html
+++ b/templates/login.html
@@ -1,62 +1,151 @@
 {% extends 'base.html' %}
 
-{% block title %}
-<title>
-  Login
-</title>
-{% endblock %}
+{% block title %}Sign in{% endblock %}
 
 {% block content %}
-    <!-- <form action="" method="post">
-      <input type="text" name="username" id="username"/>
-      <br>
-      <input type="password" name="password" id="password"/>
-      <br>
-      <button>Submit</button>
-    </form> -->
-<section class="pb-4" style="padding-top: 100px;">
-  <div class="bg-white">
-    <section class="w-100 p-4 d-flex justify-content-center pb-4">
-      <div style="width: 26rem;">
-        <!-- Pills content -->
-        <div class="tab-content">
-          <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
-            <form method="post">
-              <!-- Email input -->
-              <div class="form-outline mb-4">
-                <label class="form-label" for="username" style="margin-left: 0px;">Username</label>
-                <input type="text" id="username" class="form-control" name="username">
-              <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 115.2px;"></div><div class="form-notch-trailing"></div></div></div>
-
-              <!-- Password input -->
-              <div class="form-outline mb-4">
-                <label class="form-label" for="password" style="margin-left: 0px;">Password</label>
-                <input type="password" id="password" name="password" class="form-control">
-              <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 64px;"></div><div class="form-notch-trailing"></div></div></div>
-
-              <!-- 2 column grid layout -->
-              <div class="row mb-4">
-                <div class="col-md-6 d-flex justify-content-center">
-                  <!-- Checkbox -->
-                  <div class="form-check mb-3 mb-md-0">
-                    <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked="">
-                    <label class="form-check-label" for="loginCheck"> Remember me </label>
-                  </div>
-                </div>
-
-                <div class="col-md-6 d-flex justify-content-center">
-                  <!-- Simple link -->
-                  <a href="#!">Forgot password?</a>
+  <main class="container">
+      <!-- ========== signin-section start ========== -->
+      <section class="signin-section">
+        <div class="container-fluid">
+          <!-- ========== title-wrapper start ========== -->
+          <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+              <div class="col-md-6">
+                <div class="title mb-30">
+                  <h2>Sign in</h2>
                 </div>
               </div>
-
-              <!-- Submit button -->
-              <button type="submit" class="btn btn-primary btn-block mb-4" style="width: 100%;">Sign in</button>
-            </form>
+              <!-- end col -->
+              <div class="col-md-6">
+                <div class="breadcrumb-wrapper mb-30">
+                  <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item">
+                        <a href="#0">Dashboard</a>
+                      </li>
+                      <li class="breadcrumb-item"><a href="#0">Auth</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">
+                        Sign in
+                      </li>
+                    </ol>
+                  </nav>
+                </div>
+              </div>
+              <!-- end col -->
+            </div>
+            <!-- end row -->
           </div>
-        <!-- Pills content -->
-      </div>
-    </section>
-  </div>
-  </section>
+          <!-- ========== title-wrapper end ========== -->
+
+          <div class="row g-0 auth-row">
+            <div class="col-lg-6">
+              <div class="auth-cover-wrapper bg-primary-100">
+                <div class="auth-cover">
+                  <div class="title text-center">
+                    <h1 class="text-primary mb-10">Welcome Back</h1>
+                    <p class="text-medium">
+                      Sign in to your Existing account to continue
+                    </p>
+                  </div>
+                  <div class="cover-image">
+                    <img src="{{ url_for('static', filename='images/auth/signin-image.svg') }}" alt="" />
+                  </div>
+                  <div class="shape-image">
+                    <img src="assets/images/auth/shape.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end col -->
+            <div class="col-lg-6">
+              <div class="signin-wrapper">
+                <div class="form-wrapper">
+                  <h2 class="mb-15">Sign In Form</h2>
+                  <p class="text-sm mb-25">
+                    Start creating the best possible user experience for you
+                    customers.
+                  </p>
+                  <form method="post">
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="input-style-1">
+                          <label>Username</label>
+                          <input type="username" placeholder="username" id="username" name="username" />
+                        </div>
+                      </div>
+                      <!-- end col -->
+                      <div class="col-12">
+                        <div class="input-style-1">
+                          <label>Password</label>
+                          <input type="password" placeholder="Password" id="password" name="password"/>
+                        </div>
+                      </div>
+                      <!-- end col -->
+                      <div class="col-xxl-6 col-lg-12 col-md-6">
+                        <div class="form-check checkbox-style mb-30">
+                          <input
+                            class="form-check-input"
+                            type="checkbox"
+                            value=""
+                            id="checkbox-remember"
+                          />
+                          <label
+                            class="form-check-label"
+                            for="checkbox-remember"
+                          >
+                            Remember me next time</label
+                          >
+                        </div>
+                      </div>
+                      <!-- end col -->
+                      <div class="col-xxl-6 col-lg-12 col-md-6">
+                        <div
+                          class="
+                            text-start text-md-end text-lg-start text-xxl-end
+                            mb-30
+                          "
+                        >
+                          <a href="#0" class="hover-underline"
+                            >Forgot Password?</a
+                          >
+                        </div>
+                      </div>
+                      <!-- end col -->
+                      <div class="col-12">
+                        <div
+                          class="
+                            button-group
+                            d-flex
+                            justify-content-center
+                            flex-wrap
+                          "
+                        >
+                          <button
+                            class="
+                              main-btn
+                              primary-btn
+                              btn-hover
+                              w-100
+                              text-center
+                            "
+                            type="submit"
+                          >
+                            Sign In
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end row -->
+                  </form>
+                </div>
+              </div>
+            </div>
+            <!-- end col -->
+          </div>
+          <!-- end row -->
+        </div>
+      </section>
+      <!-- ========== signin-section end ========== -->
+
+    </main>
 {% endblock %}
