add UI Signup, user manage, profile

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
           <div class="row align-items-center">
             <div class="col-md-6">
               <div class="title mb-30">
-                <h2>eCommerce Dashboard</h2>
+                <h2>Analysis Data</h2>
               </div>
             </div>
             <!-- end col -->
