--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -169,6 +169,11 @@
                     class="dropdown-menu dropdown-menu-end"
                     aria-labelledby="profile"
                   >
+                  <li>
+                      <a href="/profile">
+                        <i class="lni lni-user"></i> View Profile
+                      </a>
+                    </li>
                     <li>
                       <a href="/auth/logout"> <i class="lni lni-exit"></i> Sign Out </a>
                     </li>
