add signup functions

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,42 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}WELCOME TO GROUP O1{% endblock %}
+{% block title %}Login - API Dashboard{% endblock %}
 
 {% block content %}
   <main class="container">
       <!-- ========== signin-section start ========== -->
       <section class="signin-section">
         <div class="container-fluid">
-          <!-- ========== title-wrapper start ========== -->
-          <div class="title-wrapper pt-30">
-            <div class="row align-items-center">
-              <div class="col-md-6">
-                <div class="title mb-30">
-                  <h2>Sign in</h2>
-                </div>
-              </div>
-              <!-- end col -->
-              <div class="col-md-6">
-                <div class="breadcrumb-wrapper mb-30">
-                  <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item">
-                        <a href="#0">Dashboard</a>
-                      </li>
-                      <li class="breadcrumb-item"><a href="#0">Auth</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">
-                        Sign in
-                      </li>
-                    </ol>
-                  </nav>
-                </div>
-              </div>
-              <!-- end col -->
-            </div>
-            <!-- end row -->
-          </div>
-          <!-- ========== title-wrapper end ========== -->
-
           <div class="row g-0 auth-row">
             <div class="col-lg-6">
               <div class="auth-cover-wrapper bg-primary-100">
@@ -60,7 +30,7 @@
             <div class="col-lg-6">
               <div class="signin-wrapper">
                 <div class="form-wrapper">
-                  <h2 class="mb-15">Sign In Form</h2>
+                  <h2 class="mb-15">Login</h2>
                   <p class="text-sm mb-25">
                     Start creating the best possible user experience for you
                     customers.
@@ -96,6 +66,16 @@
                           <input type="checkbox" id="admin" name="admin">
                           <label for="admin">Admin</label>
                           <script>
+                             window.addEventListener('load', function(event) {  
+                              fetch('clear_session')
+                              .then(function(response) {
+                                console.log(response);
+                              })
+                              .catch(function(error) {
+                                console.log(error);
+                              });      
+                              console.log("ok")
+                            });  
                             var userCheckbox = document.getElementById("user");
                             var adminCheckbox = document.getElementById("admin");
 
@@ -174,8 +154,14 @@
                             "
                             type="submit"
                           >
-                            Sign In
+                            Login
                           </button>
+                          <div class="pt-40">
+                            <p class="text-sm text-medium text-dark text-center">
+                              Don’t have any account yet?
+                              <a href="{{ url_for('authen.clear_session_signup')}}">Create an account</a>
+                            </p>
+                          </div>
                         </div>
                       </div>
                     </div>
