--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -44,15 +44,19 @@
                 <div class="form-wrapper">
                   <h2 class="mb-15">SignUp</h2>
                   <p class="text-sm mb-25">
-                    Start creating the best possible user experience for you
-                    customers.
+                    Start creating the best possible user experience for you customers.
                   </p>
                   <form method="post">
                     <div class="row">
+                      {% if 'message_signup' in session %}
+                      <div class="col-12">
+                        <div class="alert alert-danger" style="text-align:center">{{ session['message_signup'] }}</div>
+                      </div>
+                      {% endif %}
                       <div class="col-12">
                         <div class="input-style-1">
                           <label>Username</label>
-                          <input type="username" placeholder="username" id="username" name="username" />
+                          <input type="username" placeholder="Username" id="username" name="username" />
                         </div>
                       </div>
                       <!-- end col -->
@@ -70,6 +74,12 @@
                       </div>
                       <div class="col-12">
                         <div class="input-style-1">
+                          <label>Age</label>
+                          <input type="number" placeholder="Age" id="age" name="age"/>
+                        </div>
+                      </div>
+                      <div class="col-12">
+                        <div class="input-style-1">
                           <label>Address</label>
                           <input type="text" placeholder="Address" id="address" name="address"/>
                         </div>
@@ -80,12 +90,13 @@
                           <input
                             class="form-check-input"
                             type="radio"
-                            value=""
-                            id="checkbox-remember"
+                            name="user_type" 
+                            value=2
+                            id="radio-admin"
                           />
                           <label
                             class="form-check-label"
-                            for="checkbox-remember"
+                            for="radio-admin"
                           >
                             Admin</label
                           >
@@ -95,12 +106,13 @@
                             checked
                             class="form-check-input"
                             type="radio"
-                            value=""
-                            id="checkbox-remember"
+                            name="user_type" 
+                            value=1 
+                            id="radio-normal"
                           />
                           <label
                             class="form-check-label"
-                            for="checkbox-remember"
+                            for="radio-normal"
                           >
                             Normal</label
                           >
@@ -129,10 +141,30 @@
                           >
                             SignUp
                           </button>
+                          <input type="hidden" id="signup_success" name="signup_success" value="{{check or 'false'}}" />
+                          <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+                          <script>
+                            window.addEventListener('load', function(event) {  
+                              fetch('clear_session')
+                              .then(function(response) {
+                                console.log(response);
+                              })
+                              .catch(function(error) {
+                                console.log(error);
+                              });      
+                              console.log("ok")
+                            });  
+                            var signup_check = document.getElementById('signup_success');
+                            var value_check = signup_check.value;
+                            if(value_check === 'true'){
+                              swal("Success!", "You have successfully created an account", "success");
+                              signup_check.value ='false'
+                            }
+                          </script>
                           <div class="pt-40">
                             <p class="text-sm text-medium text-dark text-center">
                               Already have an account?
-                              <a href="/auth/login">Login</a>
+                              <a href="{{ url_for('authen.clear_session_login')}}">Login</a>
                             </p>
                           </div>
                           
@@ -150,6 +182,5 @@
         </div>
       </section>
       <!-- ========== signin-section end ========== -->
-
     </main>
 {% endblock %}
