Secure CDN JavaScript

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -142,7 +142,7 @@
                             SignUp
                           </button>
                           <input type="hidden" id="signup_success" name="signup_success" value="{{check or 'false'}}" />
-                          <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                          <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" integrity="sha384-/Wx1NuqlgALfa1Do1U6Mer7quEDHOo8REf/0izoIrV8Y3Z/gtEHQc01STCEMM1LZ" crossorigin="anonymous"></script>
                           <script>
                             window.addEventListener('load', function(event) {  
                               fetch('clear_session')
