handle data, render chart

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,8 @@
   <script src="{{ url_for('static', filename='vendor/bootstrap/bootstrap.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/fontawesome/js/all.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/jquery/jquery.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/chart/Chart.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/sweetalert2/sweetalert2.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   {% block script %} {% endblock %} 
 </body>
