--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -93,7 +93,7 @@
                 "
               >
                 <div class="left">
-                  <h6 class="text-medium mb-30">Sales/Revenue</h6>
+                  <h6 class="text-medium mb-30">Tổng số lượng item được dự đoán trong tháng 12/2022</h6>
                 </div>
                 <div class="right">
                   <div class="select-style-1">
@@ -122,25 +122,11 @@
         </div>
         <!-- End Row -->
         <div class="row">
-          <div class="col-lg-5">
-            <div class="card-style mb-30">
-              <div
-                class="
-                  title
-                  d-flex
-                  justify-content-between
-                  align-items-center
-                "
-              >
-                <div class="left">
-                  <h6 class="text-medium mb-30">Sells by State</h6>
-                </div>
-              </div>
-              <!-- End Title -->
-              <div id="map" style="width: 100%; height: 400px"></div>
-              <p>Last updated: 7 days ago</p>
+         <div class="col-lg-5">
+            <div class="card-style calendar-card mb-30">
+              <div id="calendar-mini"></div>
             </div>
-          </div>
+          </div> 
           <!-- End Col -->
           <div class="col-lg-7">
             <div class="card-style mb-30">
@@ -345,15 +331,6 @@
           <!-- End Col -->
         </div>
         <!-- End Row -->
-        <div class="row">
-          <div class="col-lg-5">
-            <div class="card-style calendar-card mb-30">
-              <div id="calendar-mini"></div>
-            </div>
-          </div>
-          <!-- End Col -->
-          <!-- End Col -->
-        </div>
         <!-- End Row -->
       </div>
       <!-- end container -->
