--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,7 @@
   <script src="{{ url_for('static', filename='vendor/fontawesome/js/all.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/jquery/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/chart/Chart.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/fullcalendar/fullcalendar.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/sweetalert2/sweetalert2.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   {% block script %} {% endblock %} 
